@@ -7,24 +7,21 @@ import org.web.codefm.domain.exception.ListErrorMessageBaseException;
 import org.web.codefm.model.DetailDTO;
 import org.web.codefm.model.ErrorResponseDTO;
 
-import java.util.stream.Collectors;
-
 @UtilityClass
 public class ErrorResponseMapper {
 
-  public <T extends BaseException> ErrorResponseDTO toDTO(final T exception) {
+    public <T extends BaseException> ErrorResponseDTO toDTO(final T exception) {
 
-    final ErrorResponseDTO errorDTO = new ErrorResponseDTO();
-    errorDTO.setCode(exception.getErrorCodeEnum().getCode());
-    errorDTO.setDescription(exception.getErrorCodeEnum().getDescription());
+        final ErrorResponseDTO errorDTO = new ErrorResponseDTO();
+        errorDTO.setCode(exception.getErrorCodeEnum().getCode());
+        errorDTO.setDescription(exception.getErrorCodeEnum().getDescription());
 
-    if (exception instanceof ErrorMessageBaseException) {
-      errorDTO.setDetail(((ErrorMessageBaseException) exception).getErrorDescription());
-    } else if (exception instanceof ListErrorMessageBaseException) {
-      errorDTO.setDetails(((ListErrorMessageBaseException) exception).getErrors().stream()
-          .map(ex -> new DetailDTO().field(ex.getParam()).reason(ex.getMessage())).collect(
-              Collectors.toList()));
+        if (exception instanceof ErrorMessageBaseException errMsgEx) {
+            errorDTO.setDetail(errMsgEx.getErrorDescription());
+        } else if (exception instanceof ListErrorMessageBaseException listErrMsgEx) {
+            errorDTO.setDetails(listErrMsgEx.getErrors().stream()
+                    .map(ex -> new DetailDTO().field(ex.getParam()).reason(ex.getMessage())).toList());
+        }
+        return errorDTO;
     }
-    return errorDTO;
-  }
 }
